--- a/public/styles.css
+++ b/public/styles.css
@@ -7,18 +7,18 @@ body {
     padding: 24px;
 }
  .container {
-     background-color: deepskyblue;
+     background-color: black;
      border-radius: 30px;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
      padding: 20px;
      margin-top: 20px;
      margin-bottom: 20px;
-     opacity: 0.5;
+     opacity: 0.7;
 }    
 .navbar {
     background: linear-gradient(90deg, deepskyblue, #333);
     border-radius: 10px;
-    opacity: 0.5;
+    opacity: 0.7;
 }
  h1 {
      color: #343a40;
