--- a/public/styles.css
+++ b/public/styles.css
@@ -1,14 +1,15 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('https://i.ibb.co/QYPqXxF/0c9bbd541df8df697b8995deda24bcd1.gif'); 
+    background-image: url('https://i.imgur.com/Lqa3B0Z.gif'); 
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     padding: 24px;
 }
  .container {
-     background-color: black;
-     border-radius: 30px;
+     background-color: #2980b9;
+     border-radius: 25px;
+     border: 3px solid orangered;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
      padding: 20px;
      margin-top: 20px;
@@ -19,6 +20,7 @@ body {
     background: linear-gradient(90deg, deepskyblue, #333);
     border-radius: 10px;
     opacity: 0.7;
+    border: 3px solid orangered;
 }
  h1 {
      color: #343a40;
@@ -111,7 +113,7 @@ body {
   display: none;
 }
 #json-data{
-background-image: url('https://media1.giphy.com/media/pfEOdgxXBFuf3EqQeq/giphy.gif?cid=6c09b952t99v0nkqe3og95toef37tzgventfkqmisahb2p5q&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g');
+background-image: url('https://i.ibb.co/Q70bgRf/4d0432bb05c8def9fa01017aa50bfbcd.gif');
     background-size: cover;
     background-repeat: no-repeat;
     border-color: blue;
